{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 209,
  "lineage": "809d96e6-94a3-09d2-20b0-9bd6d733c190",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:subnet/subnet-0cead18ed696d9393",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 59,
            "cidr_block": "10.0.0.0/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tek-poc-private1-us-east-2a"
                ]
              }
            ],
            "id": "subnet-0cead18ed696d9393",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885300287765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "tek-poc-private1-us-east-2a"
            },
            "vpc_id": "vpc-01def1f11cd7deeec"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:subnet/subnet-023cd794a6cf5b2cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 59,
            "cidr_block": "10.0.0.64/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tek-poc-private2-us-east-2b"
                ]
              }
            ],
            "id": "subnet-023cd794a6cf5b2cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885300287765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "tek-poc-private2-us-east-2b"
            },
            "vpc_id": "vpc-01def1f11cd7deeec"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:vpc/vpc-01def1f11cd7deeec",
            "cidr_block": "10.0.0.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-046d7d767e857db3b",
                "cidr_block": "10.0.0.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a44ae30c69b8db23",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tekton-vpc"
                ]
              }
            ],
            "id": "vpc-01def1f11cd7deeec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04835e83c205930c6",
            "owner_id": "885300287765",
            "tags": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:security-group/sg-021350e4df860927a",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-021350e4df860927a",
            "ingress": [],
            "name": "tek-poc-eks-cluster20220509033902533400000003",
            "name_prefix": "tek-poc-eks-cluster",
            "owner_id": "885300287765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tek-poc-eks-cluster-eks_cluster_sg",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "tek-poc-eks-cluster-eks_cluster_sg",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01def1f11cd7deeec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:security-group/sg-05b87ed7c71aed096",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-05b87ed7c71aed096",
            "ingress": [],
            "name": "tek-poc-eks-cluster20220509033902532800000002",
            "name_prefix": "tek-poc-eks-cluster",
            "owner_id": "885300287765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tek-poc-eks-cluster-eks_worker_sg",
              "environment": "dev",
              "kubernetes.io/cluster/tek-poc-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "tek-poc-eks-cluster-eks_worker_sg",
              "environment": "dev",
              "kubernetes.io/cluster/tek-poc-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01def1f11cd7deeec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3593396419",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-021350e4df860927a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1328396907",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-021350e4df860927a",
            "self": false,
            "source_security_group_id": "sg-05b87ed7c71aed096",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1600980365",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05b87ed7c71aed096",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1863995729",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b87ed7c71aed096",
            "self": false,
            "source_security_group_id": "sg-021350e4df860927a",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-4052341564",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b87ed7c71aed096",
            "self": false,
            "source_security_group_id": "sg-021350e4df860927a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3218647325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05b87ed7c71aed096",
            "self": false,
            "source_security_group_id": "sg-05b87ed7c71aed096",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    }
  ]
}